fix align center of browser

--- a/docs/source/_templates/sphinx_rtd_theme/static/css/theme.css
+++ b/docs/source/_templates/sphinx_rtd_theme/static/css/theme.css
@@ -6205,13 +6205,13 @@ article ol li ul li {
 }
 
 .wy-body-for-nav {
-    background: #fcfcfc
+    background: #eeeeee
 }
 
 .wy-grid-for-nav {
-    position: absolute;
-    width: 100%;
-    height: 100%
+    height: 100%;
+    margin: auto;
+    max-width: 1100px;
 }
 
 .wy-nav-side {
